force-app/main/default/objects/SFDC_Issue__c/SFDC_Issue__c.object-meta.xml
<CustomObject>
    <description>Issues uncovered in the diligence process.</description>
    <label>Issue</label>
    <nameField>
        <label>Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>