force-app/main/default/objects/SFDC_Issue__c/fields/Due_Diligence_Project__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Project__c</fullName>
    <label>Due Diligence Project</label>
    <referenceTo>SFDC_Due_Diligence_Project__c</referenceTo>
    <relationshipName>Issue</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>