force-app/main/default/objects/SFDC_Issue__c/fields/Issue_Owner__c.field-meta.xml
<CustomField>
    <fullName>Issue_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issue Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Issue</relationshipName>
    <type>Lookup</type>
</CustomField>