force-app/main/default/objects/SFDC_Issue__c/fields/Issue_Priority__c.field-meta.xml
<CustomField>
    <fullName>Issue_Priority__c</fullName>
    <label>Issue Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Low</fullName>
            </value>
            <value>
                <fullName>2 - Medium</fullName>
            </value>
            <value>
                <fullName>3 - High</fullName>
            </value>
            <value>
                <fullName>4 - Very Urgent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>