force-app/main/default/objects/SFDC_Issue__c/fields/Issue_Status__c.field-meta.xml
<CustomField>
    <fullName>Issue_Status__c</fullName>
    <label>Issue Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - Open</fullName>
            </value>
            <value>
                <fullName>1 - Being Addressed</fullName>
            </value>
            <value>
                <fullName>2 - In Escalation</fullName>
            </value>
            <value>
                <fullName>3 - Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>